Homepage overhaul: neon AI/music hero layout, new CTAs and visual hero

--- a/index.html
+++ b/index.html
@@ -28,23 +28,43 @@
       </nav>
     </header>
     <main class="main-content">
-      <section class="intro">
-        <h2>Empowering Healing Through Education and the Medicine of Music</h2>
-        <p>FreeEd4Med.org is a nonprofit blending evidence-based medical education with practical music‑for‑healing resources — for healthcare professionals, artists, and the public.</p>
-        <a class="donate-btn" href="donate.html">Donate Now</a>
+      <section class="hero" aria-label="FreeEd4Med — AI music for healing">
+        <div class="hero-left">
+          <h2 class="neon glow-strong">FreeEd4Med — Music for Healing, Remixed by AI</h2>
+          <p class="lead">We combine open science, clinician‑grade resources, and artist workflows to create compassionate music experiences for clinical care, recovery, and wellbeing.</p>
+
+          <div class="hero-ctas">
+            <a href="research-library.html" class="btn hero-cta">Explore Research</a>
+            <a href="glossary.html" class="btn hero-cta ghost">Browse Glossary</a>
+            <a href="donate.html" class="donate-btn">Support the Project</a>
+          </div>
+
+          <p class="micro">State‑of‑the‑art tools • Open access research • Artist workflows • Clinical partnerships</p>
+        </div>
+
+        <div class="hero-right" aria-hidden="false">
+          <div class="visual-card">
+            <img src="assets/images/waveform.svg" alt="Abstract waveform and AI grid" class="hero-wave"/>
+            <div class="visual-overlay">
+              <div class="chip">AI Assisted • MadMoozeMusic</div>
+              <div class="badge">Open access • Trustworthy</div>
+            </div>
+          </div>
+        </div>
       </section>
-      <section class="features">
+
+      <section class="features" aria-label="Core features">
         <div class="feature">
-          <h3>Free Lessons</h3>
-          <p>Access video lessons and downloadable content designed by healthcare professionals and artists collaborating on therapeutic music projects.</p>
+          <h3>Evidence-first</h3>
+          <p>Curated open access research and clinical guidance for using music intentionally in healthcare settings.</p>
         </div>
         <div class="feature">
-          <h3>Public Resources</h3>
-          <p>Learn how to protect your health and use music as a practical tool for wellbeing and emotional support.</p>
+          <h3>Artist-forward</h3>
+          <p>Tools, templates, and workflow notes that make it easy for artists to contribute high-quality stems and therapeutically useful tracks.</p>
         </div>
         <div class="feature">
-          <h3>Music & Healing</h3>
-          <p>Explore research, playlists, and artist workflows focused on how music supports clinical care, recovery, and emotional resilience.</p>
+          <h3>AI-enabled workflows</h3>
+          <p>Generative prompts, sample stems, and curated playlists — amplified by modern AI tools to accelerate safe, thoughtful music creation.</p>
         </div>
       </section>
     </main>
