Fix: tool-card contrast (readable text/links) and apps layout (missing </header>); increase tools-grid spacing

--- a/apps.html
+++ b/apps.html
@@ -25,6 +25,7 @@
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
       </nav>
+    </header>
 
     <main class="main-content">
       <h2>Apps & Scripts — Developer resources</h2>
