Standardize homepage CTA buttons: unify classes to 'btn hero-cta', reduce padding for less height, add hover effects

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
           <div class="hero-ctas">
             <a href="research-library.html" class="btn hero-cta">Explore Research</a>
-            <a href="glossary.html" class="btn hero-cta ghost">Browse Glossary</a>
-            <a href="donate.html" class="donate-btn">Support the Project</a>
+            <a href="glossary.html" class="btn hero-cta">Browse Glossary</a>
+            <a href="donate.html" class="btn hero-cta">Support the Project</a>
           </div>
 
           <p class="micro">State‑of‑the‑art tools • Open access research • Artist workflows • Clinical partnerships</p>
