--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <header class="site-header" style="display: flex; align-items: center; justify-content: space-between; gap: 2rem;">
-      <div style="display: flex; align-items: center; gap: 1rem;">
-        <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
-        <h1>FreeEd4Med.org</h1>
-      </div>
+    <header class="site-header">
+      <h1>FreeEd4Med.org</h1>
       <nav class="navbar" role="navigation" aria-label="Main site navigation">
         <a href="index.html">Home</a>
         <a href="research-library.html">Research Library</a>
