Add logo back above title; enhance title size and style; arrange nav in 2 rows of 5 buttons with improved styling; increase features gap for better spacing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <header class="site-header">
+      <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
       <h1>FreeEd4Med.org</h1>
       <nav class="navbar" role="navigation" aria-label="Main site navigation">
         <a href="index.html">Home</a>
