Restore content to public.html: add sections for symptoms, healthcare navigation, prevention, and healing resources; update header to match site style

--- a/public.html
+++ b/public.html
@@ -2,37 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Public</title>
+  <title>Public Info - FreeEd4Med</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="style.css" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
-    <header class="site-header" style="display: flex; align-items: center; justify-content: space-between; gap: 2rem;">
-        <div style="display: flex; align-items: center; gap: 1rem;">
-            <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
-            <h1>FreeEd4Med.org</h1>
-        </div>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <!-- Healthcare Education removed -->
-            <a href="research-library.html">Research Library</a>
-            <a href="tools.html">Tools / How I Create</a>
-            <a href="apps.html">Apps &amp; Scripts</a>
-            <a href="ai-prompts.html">AI Prompt Guide</a>
-            <!-- Multimedia removed -->
-            <a href="public.html">Public Info</a>
-            <a href="donate.html">Donate</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="glossary.html">Glossary</a>
-        </nav>
+    <header class="site-header">
+      <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
+      <h1>FreeEd4Med.org</h1>
+      <nav class="navbar" role="navigation" aria-label="Main site navigation">
+        <a href="index.html">Home</a>
+        <a href="research-library.html">Research Library</a>
+        <a href="tools.html">Tools / How I Create</a>
+        <a href="apps.html">Apps &amp; Scripts</a>
+        <a href="ai-prompts.html">AI Prompt Guide</a>
+        <a href="glossary.html">Glossary</a>
+        <a href="public.html">Public Info</a>
+        <a href="donate.html">Donate</a>
+        <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
+      </nav>
     </header>
     <main class="main-content">
-<h2>Public Health & Multimedia</h2>
-<p>Learn how to recognize symptoms, navigate care, prevent illness, and discover our free artist resources and playlists for healing.</p>
+      <h2>Public Health Information</h2>
+      <p>Learn how to recognize symptoms, navigate care, prevent illness, and discover our free artist resources and playlists for healing.</p>
 
-        <!-- Multimedia section removed per site refactor -->
+      <section class="intro">
+        <h3>Recognizing Symptoms</h3>
+        <p>Understanding common health symptoms is the first step in maintaining wellness. Here are key indicators for various conditions:</p>
+        <ul>
+          <li><strong>Cardiovascular:</strong> Chest pain, shortness of breath, irregular heartbeat</li>
+          <li><strong>Respiratory:</strong> Persistent cough, wheezing, difficulty breathing</li>
+          <li><strong>Mental Health:</strong> Changes in mood, sleep patterns, or appetite</li>
+          <li><strong>Infectious Diseases:</strong> Fever, fatigue, unexplained rashes</li>
+        </ul>
+      </section>
+
+      <section class="intro">
+        <h3>Navigating Healthcare</h3>
+        <p>Finding the right care can be overwhelming. Here's how to get started:</p>
+        <ol>
+          <li>Identify your symptoms and track them</li>
+          <li>Consult with a primary care physician</li>
+          <li>Seek specialist referrals when needed</li>
+          <li>Utilize telemedicine options for convenience</li>
+        </ol>
+      </section>
+
+      <section class="intro">
+        <h3>Prevention Strategies</h3>
+        <p>Prevention is key to long-term health. Focus on these areas:</p>
+        <ul>
+          <li>Regular exercise and balanced nutrition</li>
+          <li>Stress management and adequate sleep</li>
+          <li>Routine health screenings</li>
+          <li>Vaccinations and health education</li>
+        </ul>
+      </section>
+
+      <section class="intro">
+        <h3>Healing Resources</h3>
+        <p>Explore our curated collection of healing music and artistic resources:</p>
+        <div class="tools-grid">
+          <div class="tool-card">
+            <h3>Music Therapy Playlists</h3>
+            <p>Curated playlists designed for relaxation and healing.</p>
+            <a href="#playlists">Explore Playlists</a>
+          </div>
+          <div class="tool-card">
+            <h3>Artist Resources</h3>
+            <p>Free tools and guides for creating therapeutic art.</p>
+            <a href="#resources">View Resources</a>
+          </div>
+          <div class="tool-card">
+            <h3>Community Support</h3>
+            <p>Connect with others on similar healing journeys.</p>
+            <a href="#community">Join Community</a>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
