--- a/public.html
+++ b/public.html
@@ -9,8 +9,10 @@
 <body>
   <div class="container">
     <header class="site-header">
-      <img src="images/logo.png" alt="FreeEd4Med Logo" class="logo" />
-      <h1>FreeEd4Med.org</h1>
+      <div style="display: flex; align-items: center; gap: 1rem;">
+        <img src="images/logo.png?v=2" alt="FreeEd4Med Logo" class="logo" />
+        <h1>FreeEd4Med.org</h1>
+      </div>
       <nav class="navbar" role="navigation" aria-label="Main site navigation">
         <a href="index.html">Home</a>
         <a href="research-library.html">Research Library</a>
