--- a/public.html
+++ b/public.html
@@ -27,62 +27,67 @@
       </nav>
     </header>
     <main class="main-content">
-      <h2>Public Health Information</h2>
+      <h2>Public Health & Multimedia</h2>
       <p>Learn how to recognize symptoms, navigate care, prevent illness, and discover our free artist resources and playlists for healing.</p>
 
-      <section class="intro">
-        <h3>Recognizing Symptoms</h3>
-        <p>Understanding common health symptoms is the first step in maintaining wellness. Here are key indicators for various conditions:</p>
-        <ul>
-          <li><strong>Cardiovascular:</strong> Chest pain, shortness of breath, irregular heartbeat</li>
-          <li><strong>Respiratory:</strong> Persistent cough, wheezing, difficulty breathing</li>
-          <li><strong>Mental Health:</strong> Changes in mood, sleep patterns, or appetite</li>
-          <li><strong>Infectious Diseases:</strong> Fever, fatigue, unexplained rashes</li>
-        </ul>
-      </section>
+      <!-- Multimedia content -->
+      <section id="multimedia">
+        <h3>Multimedia — Songs & Playlists for Healing</h3>
+        <p><em>These resources are oriented toward <strong>assuagement</strong> — helping reduce the intensity of pain, anxiety, or grief through curated musical experiences and digital delivery.</em></p>
 
-      <section class="intro">
-        <h3>Navigating Healthcare</h3>
-        <p>Finding the right care can be overwhelming. Here's how to get started:</p>
-        <ol>
-          <li>Identify your symptoms and track them</li>
-          <li>Consult with a primary care physician</li>
-          <li>Seek specialist referrals when needed</li>
-          <li>Utilize telemedicine options for convenience</li>
-        </ol>
-      </section>
+        <article>
+          <h4>Songs of Love Foundation — how to request, donate, or volunteer</h4>
+          <p>The <strong>Songs of Love Foundation</strong> creates free, personalized songs for children and seniors facing health challenges. They accept song requests, welcome volunteer songwriters, and accept donations to support their mission.</p>
+          <ul>
+            <li><a href="https://songsoflove.org/request-a-free-song/" target="_blank">Request a free song</a> — send a personalized song request for a child or senior in need.</li>
+            <li><a href="https://songsoflove.org/become-a-songs-of-love-songwriter/" target="_blank">Become a Songwriter</a> — volunteer your talents to write songs for recipients.</li>
+            <li><a href="https://songsoflove.org/donate/" target="_blank">Donate</a> — support their programs and outreach.</li>
+          </ul>
+          <p>If you'd like to collaborate with FreeEd4Med as an artist — donate time, student workshops, or offer to create specialized tracks — <a href="contact.html">contact us</a> and we'll coordinate with Songs of Love and clinical partners.</p>
+        </article>
 
-      <section class="intro">
-        <h3>Prevention Strategies</h3>
-        <p>Prevention is key to long-term health. Focus on these areas:</p>
-        <ul>
-          <li>Regular exercise and balanced nutrition</li>
-          <li>Stress management and adequate sleep</li>
-          <li>Routine health screenings</li>
-          <li>Vaccinations and health education</li>
-        </ul>
-      </section>
+        <article>
+          <h4>Sample stems pack — MadMooze (demo)</h4>
+          <p>Download a small placeholder stems package (demo) including a README and metadata so you can see how to format stems for clinical/streaming delivery:</p>
+          <ul>
+            <li><a href="assets/madmooze_sample_stems_demo.zip">Download MadMooze sample stems (ZIP)</a></li>
+            <li><a href="assets/streaming_checklist.txt">Download the Streaming Checklist (txt)</a></li>
+          </ul>
+        </article>
 
-      <section class="intro">
-        <h3>Healing Resources</h3>
-        <p>Explore our curated collection of healing music and artistic resources:</p>
-        <div class="tools-grid">
-          <div class="tool-card">
-            <h3>Music Therapy Playlists</h3>
-            <p>Curated playlists designed for relaxation and healing.</p>
-            <a href="#playlists">Explore Playlists</a>
-          </div>
-          <div class="tool-card">
-            <h3>Artist Resources</h3>
-            <p>Free tools and guides for creating therapeutic art.</p>
-            <a href="#resources">View Resources</a>
-          </div>
-          <div class="tool-card">
-            <h3>Community Support</h3>
-            <p>Connect with others on similar healing journeys.</p>
-            <a href="#community">Join Community</a>
-          </div>
-        </div>
+        <article>
+          <h4>Playlists & Revenue (streaming)</h4>
+          <p>We plan to publish curated playlists on streaming platforms to support the nonprofit with royalty income. Links below are placeholders until playlists are created.</p>
+          <ul>
+            <li>YouTube playlist: <a href="#" id="youtubePlaylist">coming soon — publish &amp; link</a></li>
+            <li>Spotify playlist: <a href="#" id="spotifyPlaylist">coming soon — publish &amp; link</a></li>
+          </ul>
+          <p>When playlists are live we recommend enabling monetization, adding clear descriptions linking to Songs of Love and FreeEd4Med, and adding artist credit (MadMoozeMusic) to help donations and visibility.</p>
+        </article>
+
+        <article>
+          <h4>Example playlists (recommended for bedside, preoperative, or pain relief)</h4>
+          <p>Below are suggested playlist themes. For copyright reasons, we provide examples as themes and guidance rather than hosted tracks. To add tracks you own or that are public domain, ask us to add an embedded playlist.</p>
+          <ul>
+            <li><strong>Calm & Grounding</strong> — slow tempos (50–70 bpm), soft pads, sustained strings, light piano motifs.</li>
+            <li><strong>Breath‑Centered Relaxation</strong> — phrasing that supports 4–6 second inhale/exhale pacing, steady slow pulse.</li>
+            <li><strong>Memories & Comfort</strong> — familiar melodic motifs, lyric references to names and memories (works well for Songs of Love personalization).</li>
+            <li><strong>Movement & Pain Modulation</strong> — rhythmic but gentle tracks suited for tapping/swaying and synchronization exercises.</li>
+          </ul>
+          <p>Would you like us to craft an example stems pack or a public playlist that matches your artist voice? We can make one and embed it here — tell us your preferred streaming platform and permission settings.</p>
+        </article>
+
+        <article>
+          <h4>Artist Participation & Partnership (digital first)</h4>
+          <p>Artists — the most scalable impact comes from preparing studio recordings and assets for digital delivery. Suggested ways to contribute:</p>
+          <ul>
+            <li>Donate studio masters and stems for inclusion in therapeutic playlists and apps (provide license terms).</li>
+            <li>Volunteer to write personalized songs (partner with Songs of Love) — provide recorded masters so they can be distributed digitally to recipients.</li>
+            <li>Submit curated streaming playlists and upload to platform‑friendly formats (Spotify, Apple Music) and provide public playlist links we can embed.</li>
+            <li>License tracks or albums to clinical programs, or provide one‑time use permissions with clear terms so hospitals and apps can integrate the music.</li>
+          </ul>
+          <p>Practical delivery checklist: provide WAV/FLAC stems, a -14 LUFS preview track, chapter markers for long mixes (where relevant), and a short README with intended use and licensing. Start by <a href="contact.html">contacting our team</a>; we'll help you connect with clinical partners and Songs of Love and cross‑promote your MadMoozeMusic presence.</p>
+        </article>
       </section>
     </main>
     <footer class="footer">
