Link 'Support the Project' button directly to Stripe donation page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="hero-ctas">
             <a href="research-library.html" class="btn hero-cta">Explore Research</a>
             <a href="glossary.html" class="btn hero-cta">Browse Glossary</a>
-            <a href="donate.html" class="btn hero-cta">Support the Project</a>
+            <a href="https://donate.stripe.com/cNi3cuazL6L72u0fLyfEk01" target="_blank" class="btn hero-cta">Support the Project</a>
           </div>
 
           <p class="micro">State‑of‑the‑art tools • Open access research • Artist workflows • Clinical partnerships</p>
