Update donate page: single 'Donate Today' button, add artists/public to message, emphasize 501c3 nonprofit and tax-deductible status

--- a/donate.html
+++ b/donate.html
@@ -34,31 +34,16 @@
             <section class="donate-options"
                 style="text-align: center; margin: 2rem auto; padding: 2rem; max-width: 600px; background-color: #f3edff; border-radius: 10px;">
                 <h2 style="color: #4a148c; margin-bottom: 1rem;">Support FreeEd4Med</h2>
-                <p style="margin-bottom: 2rem;">Your generous donation helps us provide free, high-quality education for
-                    healthcare professionals and the public.</p>
+                <p style="margin-bottom: 1rem;">Your generous donation helps us provide free, high-quality education and resources for healthcare professionals, artists, and the public.</p>
+                <p style="margin-bottom: 1.5rem; font-weight: 600; color: #2e7d32;">FreeEd4Med is a registered 501(c)(3) nonprofit organization.<br>All donations are tax-deductible to the extent allowed by law.</p>
 
                 <!-- Stripe Donate Button -->
-                <a href="https://donate.stripe.com/cNi3cuazL6L72u0fLyfEk01" target="_blank" style="display: block; padding: 12px 24px; margin: 0 auto 1.5rem;
-                          font-size: 1.1rem; background-color: #6772e5; color: #fff;
+                <a href="https://donate.stripe.com/cNi3cuazL6L72u0fLyfEk01" target="_blank" style="display: inline-block; padding: 14px 36px; margin: 0 auto;
+                          font-size: 1.2rem; font-weight: 700; background: linear-gradient(135deg, #7a2ff5, #ff5c9c); color: #fff;
                           text-align: center; text-decoration: none;
-                          border-radius: 6px; max-width: 300px; box-sizing: border-box;">
-                    Donate by Credit Card<br>(via Stripe)
+                          border-radius: 8px; box-shadow: 0 4px 16px rgba(122,47,245,0.3);">
+                    Donate Today
                 </a>
-
-                <!-- PayPal Donate Button -->
-            <form action="https://www.paypal.com/donate" method="post" target="_blank" style="margin: 0 auto; max-width: 300px;">
-                <input type="hidden" name="business" value="freeed4med@freeed4med.org" />
-                <input type="hidden" name="no_recurring" value="0" />
-                <input type="hidden" name="item_name" value="Support Free Medical Education" />
-                <input type="hidden" name="currency_code" value="USD" />
-                <button type="submit"
-                      style="width: 100%; padding: 12px 24px; font-size: 1.1rem;
-                             background-color: #0070ba; color: white;
-                             border: none; border-radius: 6px;
-                             white-space: normal; box-sizing: border-box; cursor: pointer;">
-                Donate by PayPal<br>(Credit, Debit, or e-Check)
-              </button>
-            </form>
             </section>
         </main>
 
