Add Media SuperTool manual, FFmpeg guide, and doc links

--- a/tools.html
+++ b/tools.html
@@ -113,6 +113,16 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
           </ul>
         </div>
 
+        <div class="tool-card">
+          <h3>Media SuperTool documentation</h3>
+          <p>Comprehensive resources for the <code>freeed_media_super_tool.sh</code> workflow, including detailed walkthroughs, screenshot checklists, and FFmpeg reference material.</p>
+          <ul>
+            <li><a href="docs/freeed_media_supertool_manual.html">Full User Manual (HTML)</a> — module-by-module instructions, typography engine guide, troubleshooting.</li>
+            <li><a href="docs/ffmpeg_cheatsheet.html">FFmpeg Cheat Sheet (HTML)</a> — curated command reference covering audio, video, subtitles, and visualizers.</li>
+            <li><a href="docs/image_list.txt">Screenshot/Image Capture List</a> — required captures + naming conventions for updating the manual.</li>
+          </ul>
+        </div>
+
       </section>
 
       <h3>Video / deeper demos</h3>
