Publish script download + healing playlists strategy

--- a/tools.html
+++ b/tools.html
@@ -117,9 +117,20 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
           <h3>Media SuperTool documentation</h3>
           <p>Comprehensive resources for the <code>freeed_media_super_tool.sh</code> workflow, including detailed walkthroughs, screenshot checklists, and FFmpeg reference material.</p>
           <ul>
+            <li><a href="assets/scripts/freeed_media_super_tool.sh" download>Download latest <code>freeed_media_super_tool.sh</code></a> — packaged with ANSI styling, typography engine, and visualizer presets.</li>
             <li><a href="docs/freeed_media_supertool_manual.html">Full User Manual (HTML)</a> — module-by-module instructions, typography engine guide, troubleshooting.</li>
             <li><a href="docs/ffmpeg_cheatsheet.html">FFmpeg Cheat Sheet (HTML)</a> — curated command reference covering audio, video, subtitles, and visualizers.</li>
             <li><a href="docs/image_list.txt">Screenshot/Image Capture List</a> — required captures + naming conventions for updating the manual.</li>
+          </ul>
+        </div>
+
+        <div class="tool-card">
+          <h3>Healing playlists & streaming strategy</h3>
+          <p>We are syndicating every song into mirrored Spotify + YouTube playlists across the five healing categories (Calm & Grounding, Breath-Centered Relaxation, Movement & Pain Modulation, Cognitive Activation for ADHD, Sensory Safety for ASD). Hospitals, schools, and caregivers can deploy these playlists instantly, while repeated plays generate nonprofit-friendly streaming revenue.</p>
+          <ul>
+            <li><a href="docs/healing_playlists.html">Playlist Strategy Hub</a> — placeholder links for each category, publishing cadence, and social cross-post plan.</li>
+            <li>Embed playlists in waiting rooms, LMS portals, and telehealth environments via QR codes or direct links.</li>
+            <li>Short-form content (YouTube Shorts, TikTok, X clips, Facebook Reels) now reuses the same stems to funnel audiences back to the playlists and increase monetized streams.</li>
           </ul>
         </div>
 
