Refine public collaboration copy and gradient

--- a/public.html
+++ b/public.html
@@ -43,7 +43,8 @@
             <li><a href="https://songsoflove.org/become-a-songs-of-love-songwriter/" target="_blank">Become a Songwriter</a> — volunteer your talents to write songs for recipients.</li>
             <li><a href="https://songsoflove.org/donate/" target="_blank">Donate</a> — support their programs and outreach.</li>
           </ul>
-          <p>If you'd like to collaborate with FreeEd4Med as an artist — donate time, student workshops, or offer to create specialized tracks — <a href="contact.html">contact us</a> and we'll coordinate with Songs of Love and clinical partners.</p>
+          <p>If you'd like to collaborate with FreeEd4Med as an artist — donate time or offer to create specialized tracks (provided they are free for us to use and redistribute) — <a href="contact.html">contact us</a> and we'll coordinate with a Songs of Love artist and our clinical partners so the material can support active song requests.</p>
+          <p><strong>Tax guidance for creative contributions:</strong> Donated music services are <em>not</em> tax-deductible because no monetary value can be assigned to artistic labor. As the 501(c)(3), FreeEd4Med will provide a written acknowledgment describing the service (e.g., “Donation of musical composition and recording services”) without assigning a dollar amount. If you incur unreimbursed, out-of-pocket expenses, the acknowledgment can confirm that no goods or services were provided in return so you can consult your tax advisor about those receipts.</p>
         </article>
 
         <article>
@@ -81,12 +82,12 @@
           <h4>Artist Participation & Partnership (digital first)</h4>
           <p>Artists — the most scalable impact comes from preparing studio recordings and assets for digital delivery. Suggested ways to contribute:</p>
           <ul>
-            <li>Donate studio masters and stems for inclusion in therapeutic playlists and apps (provide license terms).</li>
+            <li>Donate studio masters and stems for inclusion in therapeutic playlists and apps (include a written statement granting FreeEd4Med perpetual, free-use rights for nonprofit playlists, clinical programs, and derivative educational content).</li>
             <li>Volunteer to write personalized songs (partner with Songs of Love) — provide recorded masters so they can be distributed digitally to recipients.</li>
             <li>Submit curated streaming playlists and upload to platform‑friendly formats (Spotify, Apple Music) and provide public playlist links we can embed.</li>
-            <li>License tracks or albums to clinical programs, or provide one‑time use permissions with clear terms so hospitals and apps can integrate the music.</li>
+            <li>Grant FreeEd4Med a no-cost, non-exclusive license to deploy tracks or albums across our playlists and programs; we will handle downstream sharing with hospitals, schools, and partner apps under those same free-use terms.</li>
           </ul>
-          <p>Practical delivery checklist: provide WAV/FLAC stems, a -14 LUFS preview track, chapter markers for long mixes (where relevant), and a short README with intended use and licensing. Start by <a href="contact.html">contacting our team</a>; we'll help you connect with clinical partners and Songs of Love and cross‑promote your MadMoozeMusic presence.</p>
+          <p>Practical delivery checklist: provide WAV/FLAC stems, a -14 LUFS preview track, chapter markers for long mixes (where relevant), and a short README with intended use and licensing. Start by <a href="contact.html">contacting our team</a>.</p>
         </article>
       </section>
     </main>
