Add version footer to debug deployment

--- a/index.html
+++ b/index.html
@@ -156,5 +156,8 @@
         setInterval(fetchHeadlines, 1000*60*5);
       })();
     </script>
+    <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+      &copy; 2025 FreeEd4Med.org | V7.1 (Deployed)
+    </footer>
 </body>
 </html>
