Add required InterServer attribution link

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       })();
     </script>
     <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
-      &copy; 2025 FreeEd4Med.org | V7.1 (Deployed)
+      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a>
     </footer>
 </body>
 </html>
