Fix CSS caching, update navigation, and add SuperTool placeholder

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Contact</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=7.2" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
@@ -20,6 +20,7 @@
           <a href="tools.html">Tools / How I Create</a>
           <a href="apps.html">Apps &amp; Scripts</a>
           <a href="ai-prompts.html">AI Prompt Guide</a>
+          <a href="glossary.html">Glossary</a>
           <a href="public.html">Public Info</a>
           <a href="donate.html">Donate</a>
           <a href="contact.html">Contact</a>
@@ -64,10 +65,10 @@
     <a href="https://www.cdc.gov/media/index.html" target="_blank">CDC Newsroom</a>
   </marquee>
 </div>
-
-    <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
+    <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a>
     </footer>
   </div>
 </body>
+</html>
 </html>
