--- a/tools.html
+++ b/tools.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Tools — How I Create | FreeEd4Med</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=7.2" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
@@ -115,13 +115,8 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
 
         <div class="tool-card">
           <h3>Media SuperTool documentation</h3>
-          <p>Comprehensive resources for the <code>freeed_media_super_tool.sh</code> workflow, including detailed walkthroughs, screenshot checklists, and FFmpeg reference material.</p>
-          <ul>
-            <li><a href="assets/scripts/freeed_media_super_tool.sh" download>Download latest <code>freeed_media_super_tool.sh</code></a> — packaged with ANSI styling, typography engine, and visualizer presets.</li>
-            <li><a href="docs/freeed_media_supertool_manual.html">Full User Manual (HTML)</a> — module-by-module instructions, typography engine guide, troubleshooting.</li>
-            <li><a href="docs/ffmpeg_cheatsheet.html">FFmpeg Cheat Sheet (HTML)</a> — curated command reference covering audio, video, subtitles, and visualizers.</li>
-            <li><a href="docs/image_list.txt">Screenshot/Image Capture List</a> — required captures + naming conventions for updating the manual.</li>
-          </ul>
+          <p><strong>Coming Very Soon!</strong></p>
+          <p>We are currently finalizing the documentation and packaging for the FreeEd4Med Media SuperTool. Please check back shortly for the full release.</p>
         </div>
 
         <div class="tool-card">
