--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>About</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=7.2" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
@@ -31,8 +31,8 @@
 <p>FreeEd4Med.org blends evidence‑based medical education with creative music partnerships. We work with artists (including MadMoozeMusic) and partners like Songs of Love Foundation to create music‑for‑healing resources, clinical programs, and community outreach.</p>
 <p>We use the term <strong>assuagement</strong> (see <a href="glossary.html">Glossary</a>) to describe reducing the intensity of experiences such as pain, anxiety, and grief — a central goal of music-for-healing work.</p>
     </main>
-    <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a></p>
+    <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a>
     </footer>
   </div>
 </body>
