--- a/ai-prompts.html
+++ b/ai-prompts.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>AI Prompt Guide — Music for Healing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=7.2" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
