--- a/apps.html
+++ b/apps.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Apps & Scripts — FreeEd4Med</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style.css?v=7.2" rel="stylesheet" />
 </head>
 <body>
   <div class="container">
@@ -69,8 +69,8 @@
 
     </main>
 
-    <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org — MadMoozeMusic</p>
+    <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a>
     </footer>
   </div>
 </body>
