--- a/tools.html
+++ b/tools.html
@@ -132,7 +132,7 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
       </section>
 
       <h3>Video / deeper demos</h3>
-      <p>Embedding full walkthrough videos and DAW session stems is a priority — if you'd like, I can prepare an example Ableton/REAPER stem download and a short screen‑recorded tutorial for the site.</p>
+      <p>Coming soon: Full walkthrough videos and DAW session stems.</p>
 
     </main>
 
