Add SuperTool files, fix nav, add legal page, and geo-target news

--- a/glossary.html
+++ b/glossary.html
@@ -18,12 +18,13 @@
         <a href="index.html">Home</a>
         <a href="research-library.html">Research Library</a>
         <a href="tools.html">Tools / How I Create</a>
-        <a href="apps.html">Apps & Scripts</a>
+        <a href="apps.html">Apps &amp; Scripts</a>
         <a href="ai-prompts.html">AI Prompt Guide</a>
         <a href="glossary.html">Glossary</a>
         <a href="public.html">Public Info</a>
         <a href="donate.html">Donate</a>
         <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
       </nav>
     </header>
 
