--- a/tools.html
+++ b/tools.html
@@ -115,8 +115,13 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
 
         <div class="tool-card">
           <h3>Media SuperTool documentation</h3>
-          <p><strong>Coming Very Soon!</strong></p>
-          <p>We are currently finalizing the documentation and packaging for the FreeEd4Med Media SuperTool. Please check back shortly for the full release.</p>
+          <p><strong>FreeEd4Med Media SuperTool v5.0.0</strong></p>
+          <p>The complete toolkit for creating therapeutic music content, lyric videos, and visualizations.</p>
+          <ul>
+            <li><a href="docs/supertool_manual.html"><strong>Read the User Manual (HTML)</strong></a></li>
+            <li><a href="assets/supertool_v5/freeed_media_super_tool.sh" download>Download Script (Bash)</a></li>
+            <li><a href="assets/supertool_v5/install_linux.sh" download>Linux Installer</a> | <a href="assets/supertool_v5/install_mac.sh" download>Mac Installer</a> | <a href="assets/supertool_v5/install_windows_wsl.bat" download>Windows Installer</a></li>
+          </ul>
         </div>
 
         <div class="tool-card">
@@ -137,7 +142,7 @@ gain.gain.linearRampToValueAtTime(0.02, ctx.currentTime + 4);
     </main>
 
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org — MadMoozeMusic</p>
+      <p>&copy; 2025 FreeEd4Med.org — MadMoozeMusic | <a href="legal.html">Legal Information</a></p>
     </footer>
 
     <script>
