--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 <p>We use the term <strong>assuagement</strong> (see <a href="glossary.html">Glossary</a>) to describe reducing the intensity of experiences such as pain, anxiety, and grief — a central goal of music-for-healing work.</p>
     </main>
     <footer style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
-      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a>
+      &copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a> | <a href="legal.html" style="color: #666; text-decoration: underline;">Legal</a>
     </footer>
   </div>
 </body>
