--- a/ai-prompts.html
+++ b/ai-prompts.html
@@ -133,8 +133,8 @@
 
     </main>
 
-    <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org</p>
+    <footer class="footer" style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+      <p>&copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a> | <a href="legal.html" style="color: #666; text-decoration: underline;">Legal</a></p>
     </footer>
   </div>
 </body>
