--- a/donate.html
+++ b/donate.html
@@ -47,9 +47,8 @@
             </section>
         </main>
 
-        <footer class="footer">
-            <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by
-                    InterServer</a></p>
+        <footer class="footer" style="text-align: center; padding: 20px; font-size: 0.8rem; color: #666; border-top: 1px solid #eee; margin-top: 2rem;">
+            <p>&copy; 2025 FreeEd4Med.org | Powered by <a href="https://www.interserver.net" target="_blank" rel="noopener" style="color: #666; text-decoration: underline;">InterServer</a> | <a href="legal.html" style="color: #666; text-decoration: underline;">Legal</a></p>
         </footer>
     </div>
 </body>
