--- a/public.html
+++ b/public.html
@@ -92,7 +92,7 @@
       </section>
     </main>
     <footer class="footer">
-      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> — in partnership with MadMoozeMusic</p>
+      <p>&copy; 2025 FreeEd4Med.org | <a href="https://www.interserver.net" target="_blank">Powered by InterServer</a> | <a href="legal.html">Legal</a></p>
     </footer>
   </div>
 </body>
