--- a/tools.html
+++ b/tools.html
@@ -37,7 +37,7 @@
           <ul>
             <li>DAW (primary): <strong>Ardour</strong> on Linux (Ubuntu) — main composition, recording, mixing and session work</li>
             <li>Plugins: x42, Calf Studio, and <strong>LSP (Linux Studio Plugins)</strong> for synths, effects and processing on Linux</li>
-            <li>Audio utilities: <strong>ffmpeg</strong> (command‑line) for batch conversion, mastering automation, renders; <code>ardour_fixer</code> script for Ardour project fixes and automation</li>
+            <li>Audio utilities: <strong>ffmpeg</strong> (command‑line) for batch conversion, mastering automation, renders; <strong>FreeEd Media SuperTool</strong> (includes <code>ardour_fixer</code>, <code>lyric_assistant</code>, and <code>viz_master</code>) for project fixes and creative workflows</li>
             <li>Quick editing / audition: <strong>Audacity</strong> for small edits, quick exports and waveform inspection (local installs)</li>
             <li>Web tools: <strong>SUNO Studio</strong> (web‑based creative AI and mastering/production workflows)</li>
             <li>Field recording: small recorders and binaural setups for textural layers and patient‑centred audio captures</li>
